--- a/application/views/scripts/etablissement/partials/partial-plan.phtml
+++ b/application/views/scripts/etablissement/partials/partial-plan.phtml
@@ -1,6 +1,6 @@
 <tr <?php if($this->plan === null) echo "id='prototype_plan' class='hide prototypes'" ?>>
     <td>
-        <select name='PLANS[<?php echo $this->plan === null ? -1 : $this->plan['ID_ETABLISSEMENTINFORMATIONSPLAN'] ?>][ID_TYPEPLAN]' style='width: 175px'>
+        <select class='form-control' name='PLANS[<?php echo $this->plan === null ? -1 : $this->plan['ID_ETABLISSEMENTINFORMATIONSPLAN'] ?>][ID_TYPEPLAN]' style='width: 175px'>
             <?php foreach( $this->types_plans as $type_plans ) : ?>
                 <option value='<?php echo $type_plans["ID_TYPEPLAN"] ?>' <?php if( $this->plan['ID_TYPEPLAN'] == $type_plans["ID_TYPEPLAN"] ) echo "selected" ?> >
                     <?php echo $type_plans['LIBELLE_TYPEPLAN'] ?>
@@ -9,10 +9,10 @@
         </select>
     </td>
     <td>
-        <input type='text' name='PLANS[<?php echo $this->plan === null ? -1 : $this->plan['ID_ETABLISSEMENTINFORMATIONSPLAN'] ?>][NUMERO_ETABLISSEMENTPLAN]' value="<?php echo htmlentities($this->plan["NUMERO_ETABLISSEMENTPLAN"]) ?>" />
+        <input class='form-control' type='text' name='PLANS[<?php echo $this->plan === null ? -1 : $this->plan['ID_ETABLISSEMENTINFORMATIONSPLAN'] ?>][NUMERO_ETABLISSEMENTPLAN]' value="<?php echo htmlentities($this->plan["NUMERO_ETABLISSEMENTPLAN"]) ?>" />
     </td>
     <td>
-        <input type='date' name='PLANS[<?php echo $this->plan === null ? -1 : $this->plan['ID_ETABLISSEMENTINFORMATIONSPLAN'] ?>][DATE_ETABLISSEMENTPLAN]' value='<?php echo $this->plan['DATE_ETABLISSEMENTPLAN'] !== null ? date("Y-m-d", strtotime($this->plan['DATE_ETABLISSEMENTPLAN'])) : date("Y-m-d")  ?>' />
+        <input class='form-control' type='date' name='PLANS[<?php echo $this->plan === null ? -1 : $this->plan['ID_ETABLISSEMENTINFORMATIONSPLAN'] ?>][DATE_ETABLISSEMENTPLAN]' value='<?php echo $this->plan['DATE_ETABLISSEMENTPLAN'] !== null ? date("Y-m-d", strtotime($this->plan['DATE_ETABLISSEMENTPLAN'])) : date("Y-m-d")  ?>' />
     </td>
     <td>
         <input type='hidden' name='PLANS[<?php echo $this->plan === null ? -1 : $this->plan['ID_ETABLISSEMENTINFORMATIONSPLAN'] ?>][MISEAJOUR_ETABLISSEMENTPLAN]' value='0' />
