--- a/application/views/scripts/etablissement/dossiers.phtml
+++ b/application/views/scripts/etablissement/dossiers.phtml
@@ -20,7 +20,7 @@
             </ul>
 
             <?php if (($this->nbVisites) > $this->nbElemMax) : ?>
-                <button class="btn buttonOpenClose" id="completeListeVisite">Voir plus</button>
+                <button class="btn btn-default buttonOpenClose" id="completeListeVisite">Voir plus</button>
             <?php endif;
         endif ?>
     </div>
@@ -38,7 +38,7 @@
             </ul>
 
             <?php if (($this->nbEtudes) > $this->nbElemMax) : ?>
-                <button class="btn buttonOpenClose" id="completeListeEtude">Voir plus</button>
+                <button class="btn btn-default buttonOpenClose" id="completeListeEtude">Voir plus</button>
             <?php endif;
         endif ?>
     </div>
@@ -56,7 +56,7 @@
             </ul>
 
             <?php if (($this->nbAutres) > $this->nbElemMax) : ?>
-                <button class="btn buttonOpenClose" id="completeListeAutres">Voir plus</button>
+                <button class="btn btn-default buttonOpenClose" id="completeListeAutres">Voir plus</button>
             <?php endif;
         endif ?>
     </div>
