--- a/application/views/scripts/formulaire/partials/partial-form-custom.phtml
+++ b/application/views/scripts/formulaire/partials/partial-form-custom.phtml
@@ -11,10 +11,10 @@
         <?php else : ?>
             <?php foreach ($rubrique['CHAMPS'] as $champ) : ?>
                 <div class='form-group'>
-                    <label for='champ-<?= htmlspecialchars($champ["ID_CHAMP"]) ?>' class='control-label'>
+                    <label for='champ-<?= htmlspecialchars($champ["ID_CHAMP"]) ?>' class='col-md-2 control-label'>
                         <strong><?= htmlspecialchars($champ['NOM']) ?></strong>
                     </label>
-                    <div class='controls'>
+                    <div class='col-md-10'>
                         <?= $this->partial('formulaire/partials/partial-input-champ.phtml', [
                             'champ' => $champ,
                             'champsvaleurliste' => $this->champsvaleurliste,
