--- a/application/views/scripts/formulaire/partials/partial-input-champ-not-null.phtml
+++ b/application/views/scripts/formulaire/partials/partial-input-champ-not-null.phtml
@@ -2,15 +2,15 @@
     case 1:
     case 3:
     case 4: ?>
-        <span><?= htmlspecialchars($this->champ['VALEUR'], ENT_QUOTES) ?></span>
+        <p class="form-control-static"><?= htmlspecialchars($this->champ['VALEUR'], ENT_QUOTES) ?></p>
 
         <?php break;
     case 2: ?>
-        <span><?= nl2br(htmlspecialchars($this->champ['VALEUR'], ENT_QUOTES)) ?></span>
+        <p class="form-control-static"><?= nl2br(htmlspecialchars($this->champ['VALEUR'], ENT_QUOTES)) ?></p>
 
         <?php break;
     case 7: ?>
-        <span><?= htmlspecialchars(Service_Utils_Date::formatDateWithDayName($this->champ['VALEUR']), ENT_QUOTES) ?></span>
+        <p class="form-control-static"><?= htmlspecialchars(Service_Utils_Date::formatDateWithDayName($this->champ['VALEUR']), ENT_QUOTES) ?></p>
 
         <?php break;
     default:
