--- a/application/views/scripts/formulaire/partials/partial-input-champ.phtml
+++ b/application/views/scripts/formulaire/partials/partial-input-champ.phtml
@@ -15,6 +15,7 @@
         // Texte
         case 1: ?>
             <input
+                class='form-control'
                 type='text'
                 name='<?= isset($this->champ['STR_DATA']) ? $this->champ['STR_DATA'] : $champStr ?>'
                 value='<?= htmlspecialchars($this->champ['VALEUR'], ENT_QUOTES) ?>'
@@ -22,11 +23,11 @@
         <?php break;
         // Texte long
         case 2: ?>
-            <textarea name='<?= isset($this->champ['STR_DATA']) ? $this->champ['STR_DATA'] : $champStr ?>'><?= htmlspecialchars($this->champ['VALEUR'], ENT_QUOTES) ?></textarea>
+            <textarea class='form-control' name='<?= isset($this->champ['STR_DATA']) ? $this->champ['STR_DATA'] : $champStr ?>'><?= htmlspecialchars($this->champ['VALEUR'], ENT_QUOTES) ?></textarea>
         <?php break;
         // Liste
         case 3: ?>
-            <select name='<?= isset($this->champ['STR_DATA']) ? $this->champ['STR_DATA'] : $champStr ?>'>
+            <select class='form-control' name='<?= isset($this->champ['STR_DATA']) ? $this->champ['STR_DATA'] : $champStr ?>'>
                 <option selected value>Sélectionnez un élément</option>
                 <?php foreach($this->champsvaleurliste[$this->champ['ID_CHAMP']] as $champvaleurliste): ?>
                     <option
@@ -40,7 +41,7 @@
         <?php break;
         // Nombre
         case 4: ?>
-            <input type='number' name='<?= isset($this->champ['STR_DATA']) ? $this->champ['STR_DATA'] : $champStr ?>' min='0' value='<?= $this->champ['VALEUR'] ?>'>
+            <input class='form-control' type='number' name='<?= isset($this->champ['STR_DATA']) ? $this->champ['STR_DATA'] : $champStr ?>' min='0' value='<?= $this->champ['VALEUR'] ?>'>
         <?php break;
         // Case à cocher
         case 5: ?>
@@ -106,7 +107,7 @@
                 <div class="tableInput">
                     <?php foreach ($this->champ["FILS"] as $champsFils): ?>
                         <div class="colTableInput">
-                            <th><?= $champsFils['NOM'] ?></th>
+                            <label><?= $champsFils['NOM'] ?></label>
                             <?= $this->partial('formulaire/partials/partial-input-champ.phtml', [
                                 'champ' => $champsFils,
                                 'champsvaleurliste' => $this->champsvaleurliste,
@@ -119,12 +120,13 @@
             break;
         // Date
         case 7: ?>
-            <div class="colDate" >
-                <input type='text' class='date' name='<?= isset($this->champ['STR_DATA']) ? $this->champ['STR_DATA'] : $champStr ?>' value='<?= htmlspecialchars($this->champ['VALEUR'], ENT_QUOTES) ?>'>
-                <button type="button" class='today btn btn-default'>
-                    <i class='icon-calendar' aria-hidden='true'></i>
-                    Aujourd'hui
-                </button>
+            <div class="input-group">
+                <input type='text' class='date form-control' name='<?= isset($this->champ['STR_DATA']) ? $this->champ['STR_DATA'] : $champStr ?>' value='<?= htmlspecialchars($this->champ['VALEUR'], ENT_QUOTES) ?>'>
+                <span class="input-group-btn">
+                    <button type="button" class='today btn btn-default'>
+                        <span class='glyphicon glyphicon-calendar' aria-hidden='true'></span>&nbsp;Aujourd'hui
+                    </button>
+                </span>
             </div>
             <?php break;
         default:
