--- a/application/views/scripts/dossier/results/avisderogation/liste-dossier.phtml
+++ b/application/views/scripts/dossier/results/avisderogation/liste-dossier.phtml
@@ -39,7 +39,7 @@
                     );
                 ?>
             </div>
-            <button class='btn buttonOpenClose' type='button' type-dossier="<?= 'dossTypeN'.$type ?>">
+            <button class='btn btn-default buttonOpenClose' type='button' type-dossier="<?= 'dossTypeN'.$type ?>">
                 Voir plus
             </button>
         <?php endif ?>
