--- a/application/views/scripts/etablissement/add-piece-jointe.phtml
+++ b/application/views/scripts/etablissement/add-piece-jointe.phtml
@@ -1,45 +1,65 @@
-<form class="modal adresse" action='<?php echo $this->url(array('action' => 'add-piece-jointe')) ?>' method='post' enctype='multipart/form-data' >
+<div class="modal-dialog" role="document">
+    <div class="modal-content">
+        <form action='<?php echo $this->url(array('action' => 'add-piece-jointe')) ?>' method='post' enctype='multipart/form-data'>
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Fermer"><span aria-hidden="true">&times;</span></button>
+                <h3 class="modal-title">Ajouter une pièce jointe</h3>
+            </div>
 
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3>Ajouter une pièce jointe</h3>
+            <div class="modal-body">
+                <dl class='dl-horizontal'>
+                    <div class="form-group">
+                        <dt>Libellé</dt>
+                        <dd>
+                            <input class='form-control' type='text' name='name' />
+                        </dd>
+                    </div>
+
+                    <div class="form-group">
+                        <dt>Fichier à envoyer</dt>
+                        <dd>
+                            <input type='file' name='file' />
+                        </dd>
+                    </div>
+
+                    <div class="form-group">
+                        <dt>Mise en avant</dt>
+                        <dd>
+                            <ul class='list-unstyled'>
+                                <li class="radio">
+                                    <label>
+                                        <input type='radio' name='mise_en_avant' value='0' checked>
+                                        Seulement dans la liste principale
+                                    </label>
+                                </li>
+                                <li class="radio">
+                                    <label>
+                                        <input type='radio' name='mise_en_avant' value='1'>
+                                        Afficher l'image dans le diaporama
+                                    </label>
+                                </li>
+                                <li class="radio">
+                                    <label>
+                                        <input type='radio' name='mise_en_avant' value='2'>
+                                        Afficher l'image dans les plans
+                                    </label>
+                                </li>
+                            </ul>
+                            <p class='text-muted'><small>Uniquement pour les images.</small></p>
+                        </dd>
+                    </div>
+
+                    <dt>Description</dt>
+                    <dd>
+                        <textarea class='form-control' name='description' rows='3'></textarea>
+                    </dd>
+                </dl>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+                <input type='submit' id='submit' value='Ajouter' class='btn btn-success' />
+            </div>
+        </form>
     </div>
-
-    <div class="modal-body">
-    	<dl class='dl-horizontal'>
-
-    		<dt>Libellé</dt>
-			<dd>
-				<p><input type='text' name='name' /></p>
-			</dd>
-
-			<dt>Fichier à envoyer</dt>
-			<dd>
-				<p><input type='file' name='file' /></p>
-			</dd>
-
-			<dt>Mise en avant</dt>
-			<dd>
-				<ul class='list-unstyled'>
-					<li><input type='radio' name='mise_en_avant' value='0' checked >Seulement dans la liste principale</li>
-					<li><input type='radio' name='mise_en_avant' value='1' >Afficher l'image dans le diaporama</li>
-					<li><input type='radio' name='mise_en_avant' value='2' >Afficher l'image dans les plans</li>
-				</ul>
-				<p class='text-muted'><small>Uniquement pour les images.</small></p>
-			</dd>
-
-			<dt>Description</dt>
-			<dd>
-				<p>
-					<textarea name='description' rows='3'></textarea>
-				</p>
-			</dd>
-		</dl>
-    </div>
-
-    <div class="modal-footer">
-        <a href="#" data-dismiss="modal" class="btn btn-default">Annuler</a>
-        <input type='submit' id='submit' value='Ajouter' class='btn btn-success' />
-    </div>
-
-</form>
+</div>
