--- a/application/views/scripts/etablissement/edit-pieces-jointes.phtml
+++ b/application/views/scripts/etablissement/edit-pieces-jointes.phtml
@@ -1,6 +1,6 @@
 <div class='pull-right' >
     <a id="addPJQuick" class="btn btn-default"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Ajout rapide</a>
-    <a href='<?php echo $this->url(array('action' => 'add-piece-jointe')) ?>' class="btn btn-default" data-toggle="modal" data-backdrop="false" data-target="#reponse-modal" ><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Ajouter une pièce jointe</a>
+    <a href='<?php echo $this->url(array('action' => 'add-piece-jointe')) ?>' class="btn btn-default" data-toggle="modal" data-target="#reponse-modal"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Ajouter une pièce jointe</a>
     <a class='btn btn-default' href="<?php echo $this->url(array('action' => 'pieces-jointes')) ?>">Revenir sur l'affichage des pièces jointes</a>
 </div>
 
@@ -24,7 +24,7 @@
 		<?php foreach ($this->pieces_jointes as $piecejointe) : ?>
 			<tr>
 				<td>
-                                        <a href='<?php echo $this->url(array('controller' => 'etablissement', 'action' => 'get-piece-jointe', 'idpj' => $piecejointe['ID_PIECEJOINTE'], 'type' => 'etablissement')) ?>' target='_blank' >
+                    <a href='<?php echo $this->url(array('controller' => 'etablissement', 'action' => 'get-piece-jointe', 'idpj' => $piecejointe['ID_PIECEJOINTE'], 'type' => 'etablissement')) ?>' target='_blank' >
 						<?php echo $piecejointe['NOM_PIECEJOINTE'] ?>
 					</a>
 				</td>
@@ -43,7 +43,7 @@
 </table>
 <?php endif ?>
 
-<div id="reponse-modal" class="modal fade" ></div>
+<div id="reponse-modal" class="modal fade" tabindex="-1" role="dialog"></div>
 
 <script type="text/javascript">
     Dropzone.autoDiscover = false;
@@ -55,7 +55,6 @@
             var url = $(this).attr("href");
             $(target).load(url);
         });
-
 
         /* GESTION DU GLISSEZ DEPOSER */
         $("#addPJQuick").click(function() {
