--- a/application/views/scripts/search/etablissement.phtml
+++ b/application/views/scripts/search/etablissement.phtml
@@ -2,10 +2,12 @@
 <h2 class="page-header">Etablissements</h2>
 <form method='get'>
 	<div class='navbar-form well well-sm'>
-        <div class="form-group">
+        <div class="input-group">
             <input type="text" name='label' class="form-control" placeholder="Libellé de l'établissement ou son #ID ..." value="<?php if(isset($_GET["label"])) echo htmlentities($_GET["label"]) ?>" onkeypress="masquerBoutonExportCalc()"/>
+            <span class="input-group-btn">
+                <input type='submit' class="btn btn-default" name='Rechercher' value="Rechercher" onsubmit="afficherBoutonExportCalc()"/>
+            </span>
         </div>
-        <input type='submit' class="btn btn-default" name='Rechercher' value="Rechercher" onsubmit="afficherBoutonExportCalc()"/>
         <input type='hidden' name='page' value="1" />
 
         <small>
@@ -134,7 +136,7 @@
             </div>
         <?php else : ?>
             <div class='pull-right' <?php echo (($this->is_allowed_export_calc) ? '' : 'style="visibility: hidden;"') ?>>
-                <small style='font-weight:bold;color:red;'>La fonctionnalité d'export Calc est limitée à 10 000 éléments</small>
+                <small class='text-danger'><b>La fonctionnalité d'export Calc est limitée à 10 000 éléments</b></small>
             </div>
         <?php endif ?>
     </div>
