--- a/application/views/scripts/search/dossier.phtml
+++ b/application/views/scripts/search/dossier.phtml
@@ -35,10 +35,12 @@
 <h2 class="page-header">Dossiers</h2>
 <form method='get'>
     <div class='navbar-form well well-sm'>
-        <div class="form-group">
+        <div class="input-group">
             <input type="text" name='objet' class="form-control" placeholder="Objet du dossier ..." value="<?php if(isset($_GET["objet"])) echo htmlentities($_GET["objet"]) ?>" onkeypress="masquerBoutonExportCalc()"/>
+            <span class="input-group-btn">
+                <input type='submit' class="btn btn-default" name='Rechercher' value="Rechercher" onsubmit="afficherBoutonExportCalc()"/>
+            </span>
         </div>
-        <input type='submit' class="btn btn-default" name='Rechercher' value="Rechercher" onsubmit="afficherBoutonExportCalc()"/>
         <input type='hidden' name='page' value="1" />
 
         <small>
@@ -202,7 +204,7 @@
             </div>
         <?php else : ?>
             <div class='pull-right' <?php echo (($this->is_allowed_export_calc) ? '' : 'style="visibility: hidden;"') ?>>
-                <small style='font-weight:bold;color:red;'>La fonctionnalité d'export Calc est limitée à 10 000 éléments</small>
+                <small class='text-danger'><b>La fonctionnalité d'export Calc est limitée à 10 000 éléments</b></small>
             </div>
         <?php endif ?>
     </div>
