--- a/application/views/scripts/etablissement/descriptif/edit-descriptif-personnalise.phtml
+++ b/application/views/scripts/etablissement/descriptif/edit-descriptif-personnalise.phtml
@@ -1,12 +1,13 @@
 <form action='<?= $this->url(array('action' => 'edit-descriptif')) ?>' method='post' class='form-horizontal'>
+    <h3 class='pull-left'>Modification des descriptifs</h3>
     <div class='action-buttons pull-right'>
         <div class="btn-group">
             <a class='btn btn-default' href="<?= $this->url(array('action' => 'descriptif')) ?>">Annuler la modification</a>
             <input type='submit' class="btn btn-success" value='Sauvegarder'>
         </div>
     </div>
+    <div class="clearfix"></div>
 
-    <h3>Modification des descriptifs</h3>
     <h4 class='h4_subtitle'>Descriptif</h4>
 
     <div class='descriptif-personnalise_rubriques-infos descriptif-personnalise_rubriques-infos--edit'>
