--- a/application/views/scripts/etablissement/index.phtml
+++ b/application/views/scripts/etablissement/index.phtml
@@ -1,9 +1,9 @@
 <div id='etablissement'>
+    <h3 class='pull-left'>Fiche d'informations générales</h3>
     <div class='pull-right'>
         <a class='btn btn-default' href="<?php echo $this->url(array('action' => 'edit')) ?>">Modifier la fiche</a>
     </div>
-
-    <h3>Fiche d'informations générales</h3>
+    <div class="clearfix"></div>
 
     <div class='row'>
         <!-- Informations générales de l'établissement -->
