--- a/application/views/scripts/etablissement/pieces-jointes.phtml
+++ b/application/views/scripts/etablissement/pieces-jointes.phtml
@@ -1,8 +1,8 @@
+<h3 class='pull-left'>Pièces jointes</h3>
 <div class='pull-right' >
     <a class='btn btn-default' href="<?php echo $this->url(array('action' => 'edit-pieces-jointes')) ?>">Gestion des pièces jointes</a>
 </div>
-
-<h3>Pièces jointes</h3>
+<div class="clearfix"></div>
 
 <?php if(count($this->pieces_jointes) == 0) : ?>
 
