--- a/application/views/scripts/etablissement/dossiers.phtml
+++ b/application/views/scripts/etablissement/dossiers.phtml
@@ -1,9 +1,10 @@
 <input name = "idEtablissement" type="hidden" value=<?php echo($this->etablissement['general']['ID_ETABLISSEMENT'])?> />
+
+<h3 class='pull-left'>Liste des dossiers</h3>
 <div class='pull-right'>
     <a class='btn btn-default' href="<?php echo $this->url(array('controller' => 'dossier', 'action' => 'add', 'id_etablissement' => $this->etablissement['general']['ID_ETABLISSEMENT']), null, true) ?>">Ajouter un dossier</a>
 </div>
-
-<h3>Liste des dossiers</h3>
+<div class="clearfix"></div>
 
 <?php if (count($this->visites) == 0 && count($this->etudes) == 0 && count($this->autres) == 0) : ?>
     <div class='well well-large text-center'>
@@ -11,55 +12,65 @@
         <p><a href='<?php echo $this->url(array('controller' => 'dossier', 'action' => 'add', 'id_etablissement' => $this->etablissement['general']['ID_ETABLISSEMENT']), null, true) ?>' class='btn btn-default btn-lg'>Ajouter un dossier</a></p>
     </div>
 <?php else : ?>
-    <div class="text-center" id="content_visites_ets">
-        <?php if (count($this->visites) > 0) : ?>
-            <h4>Visites</h4>
-            <ul class='recherche_liste'>
-                <?= $this->partialLoop('search/results/dossier.phtml', $this->visites) ?>
-                <div class="voir-plus" id="divcompleteListeVisite"></div>
-            </ul>
+    <?php if (count($this->visites) > 0) : ?>
+        <div class="text-center" id="content_visites_ets">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">Visites</h4>
+                </div>
+                <div class="panel-body">
+                    <ul class='recherche_liste'>
+                        <?= $this->partialLoop('search/results/dossier.phtml', $this->visites) ?>
+                        <div class="voir-plus" id="divcompleteListeVisite"></div>
+                    </ul>
 
-            <?php if (($this->nbVisites) > $this->nbElemMax) : ?>
-                <button class="btn btn-default buttonOpenClose" id="completeListeVisite">Voir plus</button>
-            <?php endif;
-        endif ?>
-    </div>
+                    <?php if (($this->nbVisites) > $this->nbElemMax) : ?>
+                        <button class="btn btn-default buttonOpenClose" id="completeListeVisite">Voir plus</button>
+                    <?php endif ?>
+                </div>
+            </div>
+        </div>
+    <?php endif ?>
 
-    <div class="text-center" id="content_etudes_ets">
-        <?php if (count($this->etudes) > 0) :
-            if (count($this->visites) > 0) : ?>
-                <hr />
-            <?php endif ?>
+    <?php if (count($this->etudes) > 0) : ?>
+        <div class="text-center" id="content_etudes_ets">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">Études</h4>
+                </div>
+                <div class="panel-body">
+                    <ul class='recherche_liste'>
+                        <?= $this->partialLoop('search/results/dossier.phtml', $this->etudes)  ?>
+                        <div class="voir-plus" id='divcompleteListeEtude'></div>
+                    </ul>
 
-            <h4>Études</h4>
-            <ul class='recherche_liste'>
-                <?= $this->partialLoop('search/results/dossier.phtml', $this->etudes)  ?>
-                <div class="voir-plus" id='divcompleteListeEtude'></div>
-            </ul>
+                    <?php if (($this->nbEtudes) > $this->nbElemMax) : ?>
+                        <button class="btn btn-default buttonOpenClose" id="completeListeEtude">Voir plus</button>
+                    <?php endif ?>
+                </div>
+            </div>
+        </div>
+    <?php endif ?>
 
-            <?php if (($this->nbEtudes) > $this->nbElemMax) : ?>
-                <button class="btn btn-default buttonOpenClose" id="completeListeEtude">Voir plus</button>
-            <?php endif;
-        endif ?>
-    </div>
+    <?php if (count($this->autres) > 0) : ?>
+        <div class="text-center" id="content_autres_ets">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4 class="panel-title">Autres</h4>
+                </div>
+                <div class="panel-body">
+                    <ul class='recherche_liste'>
+                        <?= $this->partialLoop('search/results/dossier.phtml', $this->autres) ?>
+                        <div class='voir-plus' id='divcompleteListeAutres'></div>
+                    </ul>
 
-    <div class="text-center" id="content_autres_ets">
-        <?php if (count($this->autres) > 0) :
-            if (count($this->visites) > 0 || count($this->etudes) > 0) : ?>
-                <hr />
-            <?php endif ?>
-
-            <h4>Autres</h4>
-            <ul class='recherche_liste'>
-                <?= $this->partialLoop('search/results/dossier.phtml', $this->autres) ?>
-                <div class='voir-plus' id='divcompleteListeAutres'></div>
-            </ul>
-
-            <?php if (($this->nbAutres) > $this->nbElemMax) : ?>
-                <button class="btn btn-default buttonOpenClose" id="completeListeAutres">Voir plus</button>
-            <?php endif;
-        endif ?>
-    </div>
+                    <?php if (($this->nbAutres) > $this->nbElemMax) : ?>
+                        <button class="btn btn-default buttonOpenClose" id="completeListeAutres">Voir plus</button>
+                    <?php endif ?>
+                </div>
+            </div>
+        </div>
+    <?php endif ?>
 <?php endif ?>
 
 <script>
