--- a/application/views/scripts/etablissement/edit-pieces-jointes.phtml
+++ b/application/views/scripts/etablissement/edit-pieces-jointes.phtml
@@ -1,10 +1,10 @@
+<h3 class='pull-left'>Gestion des pièces jointes</h3>
 <div class='pull-right' >
     <a id="addPJQuick" class="btn btn-default"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Ajout rapide</a>
     <a href='<?php echo $this->url(array('action' => 'add-piece-jointe')) ?>' class="btn btn-default" data-toggle="modal" data-target="#reponse-modal"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> Ajouter une pièce jointe</a>
     <a class='btn btn-default' href="<?php echo $this->url(array('action' => 'pieces-jointes')) ?>">Revenir sur l'affichage des pièces jointes</a>
 </div>
-
-<h3>Gestion des pièces jointes</h3>
+<div class="clearfix"></div>
 
 <div id="dropzone" class="dropzone" style="display:none"></div>
 
