--- a/application/layouts/index.phtml
+++ b/application/layouts/index.phtml
@@ -33,7 +33,9 @@
                 </div>
             </div>
 
-            <?php echo $this->render("includes/footer.phtml"); ?>
+            <div class="row">
+                <?php echo $this->render("includes/footer.phtml"); ?>
+            </div>
         </div>
     </body>
 </html>
